// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given Bruger Menu on FuelTax Landing Page Render Bruger Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="actions menu list"
    className="btn-listmemu "
    onClick={[Function]}
    size="small"
    startIcon={
      <WithStyles(ForwardRef(SvgIcon))
        component={[Function]}
        viewBox="0 0 20 20"
      />
    }
    variant="contained"
  />
  <ForwardRef(Popper)
    anchorEl={null}
    className="actions-popper"
    disablePortal={true}
    open={false}
    placement="bottom-end"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;

exports[`Given Sortby Menu on FuelTax Landing Page- Render Sortby Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="sortby menu list"
    className="btn-sortby "
    onClick={[Function]}
    startIcon={<Memo />}
  >
    buttons.sort by
  </WithStyles(ForwardRef(Button))>
  <ForwardRef(Popper)
    anchorEl={null}
    className="sortby-popper"
    disablePortal={true}
    open={false}
    placement="bottom-start"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;
